--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   firebase_core: ^4.3.0
   cloud_firestore: ^6.1.1
   google_sign_in: ^6.2.2
-  http: ^1.6.0
+  carousel_slider: ^5.1.1
+  get: ^4.7.3
+ 
 
 dev_dependencies:
   flutter_test:
