--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_sign_in: ^6.2.2
   carousel_slider: ^5.1.1
   get: ^4.7.3
+  razorpay_flutter: ^1.4.0
+   
  
 
 dev_dependencies:
